@@ -1,3 +1,4 @@
+7/11/14 #71 scale diameter of starts in LevelCompletedNode for levels with lots of stars
 7/11/14 #71 support different numbers of equations per game level, to support 'playAll' query parameter
 7/11/14 #72 show correct coefficients when running in dev mode
 7/11/14 #71 add 'playAll' query parameter, to iterate over all possible challenges in the game
